--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "browserify": "browserify index.js -s memoizeFormatConstructor > tmp/intl-format-cache.js",
     "test:saucelabs": "npm run browserify && grunt saucelabs",
     "test:unit": "mocha --require test/setup/node-unit --recursive test/unit/",
-    "test": "npm run test:unit",
+    "test": "grunt && npm run test:unit",
     "travis": "npm test && npm run test:saucelabs"
   },
   "repository": {
