--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 sudo: false
 language: node_js
 node_js:
-- '0.10'
-- '0.12'
-- '4.2'
-- '5'
+- '6'
+- '8'
+- '10'
 script: npm run travis
-env:
-  global:
-  - secure: hUY1MRfIsmk/t3BdLfEmDiObbaeHE2xodP5dMkBfm2/li6QIyFA/9pfGI1HTwLT5AnJmZt4+m0fR84AGiH/SXt4ExPYGXfYLasPUmD8O4wtVyhsoJwpru3qrcH+Dx3NhZ1C+q7ueVJTPsa1uv3fNubeJevAcJNysbEWbrULPQ28=
-  - secure: oygxyfvLeuJjo5KjczOzpw75DJPtDGxiaWHeJaORK6uaykyAjoi7lW+KhWw2+o37w/KdSMNcgW065EAy/dbEFNZT0iknKh1u6mlnnxEh5ZyUYrvt5eA5E0YU1R68oDHrzzKiA+VVHdzX/wgdFQ02EwmoExAX6UvmpkkwhTURPJ4=
+addons:
+  sauce_connect:
+    username: "okuryu"
+  jwt:
+    secure: "XuYKZ8+FtlcHWGXm7iCbqxvsTFUxgq968n3JpeWNirYK0G2w6EvPSlV97tipSGlekBGB//vpiQF2A9FcdFpNz0AIXyxh6qs/G3didEO1DRPaTQNOD8USSalof3J8AO4NSLxCPIWRVFYPqVR8hl0Eg2T9en3iAAfnME0XDHTZgpI="
